2008-04-23  Matthias Clasen  <mclasen@redhat.com>

	* system-timezone.c (system_timezone_is_zone_file_valid): Don't assume
	that g_io_channel_read_chars returns a NUL-terminated string - 
	it doesn't.

==================== 2.23.1 ====================

2008-04-21  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* gnome-clock-applet-mechanism.policy.in: rename to...
	* org.gnome.clockapplet.mechanism.policy.in: this, and add <vendor>,
	<vendor_url>, <icon>

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Change the mnemonics for the clock format radios
	to avoid a conflict with the help button. 

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	* clock.c: Make the help button on the preference dialog work.

==================== 2.22.1.3 ====================

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: (system_timezone_write_key_file),
	(recursive_compare), (files_are_identical_inode),
	(files_are_identical_content),
	(system_timezone_read_etc_localtime_content),
	(system_timezone_is_zone_file_valid),
	(system_timezone_set_etc_timezone): s/unsigned int/gsize/ since it's
	not the same on 64 bits machines. Fix bug #527441.
	Thanks to Jan de Groot <jan@jgc.homeip.net> for debugging this.

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	Add support for Arch Linux system timezone.

	* system-timezone.c: (system_timezone_read_etc_rc_conf),
	(system_timezone_write_etc_rc_conf): new methods for config in Arch
	Linux
	Add the new methods to the list of methods.

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: add/clarify some comments
	change the default order of methods to get the timezone. First look if
	/etc/locatime is a symlink, since it's cheap.
	(system_timezone_strip_path_if_valid): new, to strip the prefix path of
	a timezone filename
	(system_timezone_read_etc_localtime_softlink): use
	system_timezone_strip_path_if_valid() to also strip "posix/" if this is
	the case